--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,19 @@
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.container{
+  display: grid;
+  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  gap: 5px;
+}
+#background {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
