--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -52,6 +43,25 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+a {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.5em 1.0em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+a:hover {
+  border-color: #646cff;
+}
+a:focus,
+a:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
